Tests/CompilerTests/negative/missing-semicolon.hylo
//! no-std

fun f() {
  return return
}
